--- a/saude-sexual.html
+++ b/saude-sexual.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+     
+     <meta name="keywords" content="puberdade, saúde sexual, adolescentes, menstruação, saúde mental">
+
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!-- Chrome/Firefox -->
+    <meta name="theme-color" content="#4285f4">
+    <meta name="mobile-web-app-capable" content="yes">
+
     <link rel="stylesheet"  href="estilo.css">
     <link rel="stylesheet"href="imagens.css">
        <link rel="stylesheet"href="videos.css">
