--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <title>Saúde Jovem</title>
+  <meta name="keywords" content="puberdade, saúde sexual, adolescentes, menstruação, saúde mental">
 
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!-- Chrome/Firefox -->
+    <meta name="theme-color" content="#4285f4">
+    <meta name="mobile-web-app-capable" content="yes">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="estilo.css">
   <link rel="stylesheet"href="imagens.css">
   <link rel="icon" href="_imagem/logo.png" type="image/png">
-  <title>Saúde Jovem</title>
 </head>
 
 <body>
