--- a/Menstruação.html
+++ b/Menstruação.html
@@ -311,6 +311,15 @@ Esse é só um exemplo para entender como o ciclo funciona. Cada pessoa tem seu 
 </ul>
 <div class="alerta">
 Esses problemas podem estar ligados a hormônios desregulados, anemia, infecções ou até a algo chamado síndrome dos ovários policísticos (SOP). Só um médico pode dar o diagnóstico certo e indicar o que fazer.
+<br><Br><br>
+<div class="video-container">
+  <iframe src="https://www.youtube.com/embed/raQhwUJNPZY" 
+    title="Vídeo 6" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+    allowfullscreen>
+  </iframe>
+</div>
+<br><br><br>
 </div>
     </section>
     <footer>
