--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <div class="card">
         <div class="font face">
-          <a href="https://www.tiktok.com/@seuusuario" target="_blank">
+          <a href="https://www.tiktok.com/@saude.jovem?_t=ZM-8yOTV5rV7C9&_r=1" target="_blank">
             <i class="fab fa-tiktok"></i>
           
         </div>
