--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <meta name="theme-color" content="#4285f4">
     <meta name="mobile-web-app-capable" content="yes">
 
+  <link rel="canonical" href="https://saude-jovem-tau.vercel.app/pagina-principal" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="estilo.css">
-  <link rel="stylesheet"href="imagens.css">
+  <link rel="stylesheet" href="imagens.css">
   <link rel="icon" href="_imagem/logo.png" type="image/png">
 </head>
 
@@ -68,7 +69,7 @@
 
     <div class="conteudo-com-imagem-lupa">
       <img src="_imagem/lupa.png" alt="icone" class="icone lupa">
-      Curtiu? Então explore o site e descobra tudo o que preparamos pra você!
+      Curtiu? Então explore o site e descubra tudo o que preparamos pra você!
     </div>
     
   </section>
