--- a/puberdade-corpo.html
+++ b/puberdade-corpo.html
@@ -98,9 +98,9 @@
           <div class="conteudo-com-imagem-corpo">
             <div class="conteudo-com-imagem">
     
-		<li><img src="_imagem/setinha.png"alt="icone" class="icone seta"><img src="_imagem/icone_do_corpo.png"> <strong class="cor-azul" >Mudanças físicas:</strong> O corpo cresce rápido, aparecem características adultas e há alterações na pele e nos cabelos.</li>
+		<li><img src="_imagem/icone_do_corpo.png"> <strong class="cor-azul" >Mudanças físicas:</strong> O corpo cresce rápido, aparecem características adultas e há alterações na pele e nos cabelos.</li>
 
-		<li><img src="_imagem/setinha.png"alt="icone" class="icone seta"><img src="_imagem/icone_do_corpo.png"><strong class="cor-azul"> Mudanças hormonais e emocionais:</strong> Os hormônios aumentam, influenciando o humor e as emoções, o que é parte do desenvolvimento natural.</li>
+		<li><img src="_imagem/icone_do_corpo.png"><strong class="cor-azul"> Mudanças hormonais e emocionais:</strong> Os hormônios aumentam, influenciando o humor e as emoções, o que é parte do desenvolvimento natural.</li>
     </div>
     </div>
   </ul>
