--- a/saude-sexual.html
+++ b/saude-sexual.html
@@ -33,12 +33,13 @@
           <img src="_imagem/inicio.png" alt="Voltar para o início" class="icone-voltar-cor-laranja">
           Voltar ao Início
       </a>
-            <h2 class="cor-laranja">Falar sobre sexo é se cuidar. Saiba como ter responsabilidade, proteger seu corpo e suas emoções.</h2>
+            <h2 class="cor-laranja">Falar sobre sexo é cuidar de si. Saiba como ter responsabilidade, proteger seu corpo e suas emoções.</h2>
    
 <div class="conteudo-com-imagem-relacao-sexual">
       <img src="_imagem/icone_relação_sexual.png" alt="icone" class="icone relação-sexual">
-<p>Se você como nós está passando pela adolescência, talvez esteja cheio(a) de dúvidas sobre seu corpo, sentimentos novos e até sobre sexo. Calma, isso é normal! nosso corpo está mudando e, com ele, vem a curiosidade. A ideia aqui é te informar sem julgamentos, com base no que a ciência diz.<br>
-Sexo seguro não é só sobre usar camisinha é sobre cuidar de si e do outro, com respeito, proteção e escolha consciente.</p>
+<p>Se você, assim como nós, está passando pela adolescência, talvez esteja cheio(a) de dúvidas sobre seu corpo, sentimentos novos e até sobre sexo. Calma, isso é normal! Nosso corpo está mudando e, junto com ele, vem a curiosidade.
+A ideia aqui é te informar sem julgamentos, sempre com base no que a ciência diz.<br>
+Sexo seguro não é só usar camisinha: é cuidar de si e do outro, com respeito, proteção e escolha consciente.</p>
 </div>
 <div class="titulo-com-imagem-pergunta">
     <img src="_imagem/pergunta.png" alt="Ícone" class="icone-pergunta">
@@ -48,7 +49,15 @@ Sexo seguro não é só sobre usar camisinha é sobre cuidar de si e do outro, c
     
  <h3 class="cor-laranja"><img src="_imagem/setinha.png"alt="icone" class="icone seta">Quando meu corpo está “pronto” pra pensar nisso?</h3>
 </div>
-<p>Na puberdade, o corpo começa a se transformar. Nos meninos, a voz engrossa, o pênis cresce, surgem pelos. Nas meninas, os seios crescem, a menstruação começa. Tudo isso mostra que o corpo está se preparando para a fase adulta. Mas estar fisicamente pronto não quer dizer que você precisa ter uma relação sexual agora. É uma escolha pessoal, que deve ser feita com responsabilidade e vontade — só se você realmente quiser.</p>
+<p>Na puberdade, o corpo começa a se transformar.
+Nos meninos, a voz engrossa, o pênis cresce, surgem pelos.
+Nas meninas, os seios crescem e a menstruação começa.
+
+Tudo isso mostra que o corpo está se preparando para a fase adulta.
+Mas estar fisicamente pronto não significa que você precise ter uma relação sexual agora.
+É uma escolha pessoal, que deve ser feita com responsabilidade e vontade só se você realmente quiser.
+
+</p>
 
  <h2 class="cor-laranja">O que é uma relação sexual segura?</h2>
 
@@ -58,7 +67,7 @@ Sexo seguro não é só sobre usar camisinha é sobre cuidar de si e do outro, c
 
 <li>Usa proteção, tipo camisinha;</li>
 
-<li>Evita doenças Sexualmente Transmissíveis (DSTs);</li>
+<li>Evita Infecções Sexualmente Transmissíveis (ISTs);</li>
 
 <li>Evita gravidez não planejada;</li>
 
@@ -74,7 +83,7 @@ Sexo seguro não é só sobre usar camisinha é sobre cuidar de si e do outro, c
     <img src="_imagem/remedio.png" alt="Ícone" class="icone-anticon">
  <h2 class="cor-laranja">E pílula, implante, essas coisas funcionam?</h2>
 </div>
-<p>Funcionam para evitar gravidez, mas não protegem contra doenças. Se você usar anticoncepcional, continue usando camisinha também, beleza?</p>
+<p>Sim,funcionam para evitar gravidez, mas não protegem contra doenças. Se você usar anticoncepcional, continue usando camisinha também, beleza?</p>
 <div class="titulo-com-imagem-doenças">
     <img src="_imagem/doença.png" alt="Ícone" class="icone-doenças">
 <h2 class="cor-laranja"> Quais doenças posso pegar no sexo sem proteção?</h2>
