--- a/Menina.html
+++ b/Menina.html
@@ -25,7 +25,7 @@
             <header id="cabecalho">
                 <div class="titulo-com-imagem">
                     <img src="_imagem/menina.png" alt="Ícone" class="icone">
-                    <h1 class="cor-menina">O que muda no corpo das meninas</h1>
+                    <h1 class="cor-menina">Mudanças no corpo das meninas</h1>
                 </div>
             </header>
             <section>
