--- a/Menino.html
+++ b/Menino.html
@@ -24,7 +24,7 @@
         <header id="cabecalho">
             <div class="titulo-com-imagem">
                 <img src="_imagem/menino.png" alt="Ícone" class="icone">
-                <h1 class="cor-menino">O que muda no corpo dos meninos</h1>
+                <h1 class="cor-menino">Mudanças no corpo dos meninos</h1>
             </div>
         </header>
         <section>
@@ -36,24 +36,24 @@
     <div class="conteudo-com-imagem-menino">
 
 <h2 class="cor-menino">As mudanças mais comuns:</h2>
-<li><img src="_imagem/pica.png"alt="icone" class="icone-menino"><strong class="cor-menino">Pênis e testículos crescendo:</strong> É um dos primeiros sinais.</li>
+<li><img src="_imagem/pica.png"alt="icone" class="icone-menino"><strong class="cor-menino">Pênis e testículos crescendo:</strong> É um dos primeiros sinais.</li><br>
 
 
-<li><img src="_imagem/pelos.png"alt="icone" class="icone-menino"> <strong class="cor-menino">Pelos pra todo lado:</strong> Primeiro surgem na região íntima e axilas, depois nas pernas, braços e buço (aquele comecinho de bigode). Aos poucos, vem barba e bigode de verdade. Ou seja, tudo tem seu tempo, não precisa se desesperar achando que seu bigode vai ficar fino. Calma lá, jovem! </li>
+<li><img src="_imagem/pelos.png"alt="icone" class="icone-menino"> <strong class="cor-menino">Pelos pra todo lado:</strong> Primeiro surgem na região íntima e axilas, depois nas pernas, braços e buço (aquele comecinho de bigode). Aos poucos, vem barba e bigode de verdade. Ou seja, tudo tem seu tempo, não precisa se desesperar achando que seu bigode vai ficar fino. Calma lá, jovem! </li><br>
 
-<li><img src="_imagem/voz.png"alt="icone" class="icone-menino"><strong class="cor-menino">Voz mudando:</strong class="cor-menino"> A laringe cresce, a voz engrossa  mas antes fica toda “falhando”. Meio constrangedor, mas é passageiro.</li>
-
-
-<li><img src="_imagem/onbros.png"alt="icone" class="icone-menino"><strong class="cor-menino">Ombros mais largos e músculos aparecendo:</strong> O corpo todo fica com "cara de homem."</li>
+<li><img src="_imagem/voz.png"alt="icone" class="icone-menino"><strong class="cor-menino">Voz mudando:</strong class="cor-menino"> A laringe cresce, a voz engrossa  mas antes fica toda “falhando”. Meio constrangedor, mas é passageiro.</li><br>
 
 
-<li><img src="_imagem/espinhas.png"alt="icone" class="icone-menino"><strong class="cor-menino"> Mais espinhas:</strong> Oleosidade na pele aumenta, e os cravos e espinhas também. Não é só com as meninas que isso acontece, meninos jovens também são bem propícios a terem espinhas. </li>
+<li><img src="_imagem/onbros.png"alt="icone" class="icone-menino"><strong class="cor-menino">Ombros mais largos e músculos aparecendo:</strong> O corpo todo fica com "cara de homem."</li><br>
+
+
+<li><img src="_imagem/espinhas.png"alt="icone" class="icone-menino"><strong class="cor-menino"> Mais espinhas:</strong> Oleosidade na pele aumenta, e os cravos e espinhas também. Não é só com as meninas que isso acontece, meninos jovens também são bem propícios a terem espinhas. </li><br>
 	
-<li><img src="_imagem/ejaculação.png"alt="icone" class="icone-menino"><strong class="cor-menino">Ereções espontâneas e poluções noturnas:</strong> Quem nunca se assustou ao acordar e ver o pênis ereto? Ou ficou sem entender porque isso acontece? É só o corpo testando o sistema reprodutor. Faz parte do crescimento.</li>
+<li><img src="_imagem/ejaculação.png"alt="icone" class="icone-menino"><strong class="cor-menino">Ereções espontâneas e poluções noturnas:</strong> Quem nunca se assustou ao acordar e ver o pênis ereto? Ou ficou sem entender porque isso acontece? É só o corpo testando o sistema reprodutor. Faz parte do crescimento.</li><br>
     </div>
 </ul>
 
-<p>Cada menino vive seu ritmo. Não tem regra, nem idade exata. Seu corpo vai seguir o próprio cronômetro, e tá tudo bem.</p>
+<p>Cada menino vive seu ritmo. Não tem regra, nem idade exata. Seu corpo vai seguir o próprio cronômetro.</p>
 <div class="video-container">
   <iframe src="https://www.youtube.com/embed/JLSek4WL2Tg" 
     title="YouTube video player" 
