--- a/saude-mental.html
+++ b/saude-mental.html
@@ -33,7 +33,7 @@
           <img src="_imagem/inicio.png" alt="Voltar para o início" class="icone-voltar-cor-roxo">
           Voltar ao Início
       </a>
-        <h2 class="cor-roxo">A adolescência pode trazer inseguranças e dúvidas. Vamos falar sobre autocuidado e pedir ajuda quando precisar.</h2>
+        <h2 class="cor-roxo">A adolescência pode trazer inseguranças e dúvidas. Aqui vamos falar sobre autocuidado e pedir ajuda quando precisar.</h2>
     <div class="conteudo-com-imagem-saude-mental">
         <img src="_imagem/emoçoes.png" alt="icone" class="icone saude-mental">
         <h3 class="cor-roxo"> Por que essas emoções aparecem?</h3>
