--- a/Menina.html
+++ b/Menina.html
@@ -29,7 +29,8 @@
                 </div>
             </header>
             <section>
-        <a href="puberdade-corpo.html" class="botao-voltar-menina">Voltar</a>
+      <a href="puberdade-corpo.html" class="botao-voltar botao-voltar-menina">Voltar</a>
+
     <p>Chega a adolescência e o corpo começa a se transformar rapidinho. Isso por conta dos hormônios que preparam o corpo pra virar adulto.</p>
 <div class="titulo-com-imagem-menina">
     <img src="_imagem/seios.png" alt="Ícone" class="icone-menina">
@@ -68,10 +69,11 @@
 </div>
 </section>    
 </div>
-    <footer class="cor-menina">
-        Referências:
-	Organização Mundial da Saúde (OMS)<br>
-	Manuais de Pediatria e Endocrinologia <br>   © 2025  Todos os direitos 
-    </footer>
+   <footer class="cor-menina">
+  Referências:<br>
+  Organização Mundial da Saúde (OMS)<br>
+  Manuais de Pediatria e Endocrinologia <br>
+  © 2025 Todos os direitos 
+</footer>
 </body>
 </html>
