--- a/Menino.html
+++ b/Menino.html
@@ -28,8 +28,7 @@
             </div>
         </header>
         <section>
-            <a href="puberdade-corpo.html" class="botao-voltar-menino">Voltar</a>
-
+            <a href="puberdade-corpo.html" class="botao-voltar botao-voltar-menino">Voltar</a>
    <p> Na puberdade, os meninos também encaram um monte de novidades. Tudo guiado pela testosterona, o hormônio que entra em cena com força total.</p>
 
    <ul>
@@ -66,9 +65,10 @@
 </section>     
 </div>
   <footer class="cor-menino">
-        Referências:
-	Organização Mundial da Saúde (OMS)<br>
-	Manuais de Pediatria e Endocrinologia <br>   © 2025  Todos os direitos 
-    </footer>
+  Referências:<br>
+  Organização Mundial da Saúde (OMS)<br>
+  Manuais de Pediatria e Endocrinologia <br>
+  © 2025 Todos os direitos 
+</footer>
 </body>
 </html>
