--- a/puberdade-corpo.html
+++ b/puberdade-corpo.html
@@ -84,10 +84,10 @@
       </div>
     </header>
     <section>
-      <a href="index.html" class="botao-voltar-cor-azul">
-          <img src="_imagem/inicio.png" alt="Voltar para o início" class="icone-voltar-cor-azul">
-          Voltar ao Início
-      </a>
+      <a href="index.html" class="botao-voltar botao-voltar-cor-azul">
+  <img src="_imagem/inicio.png" alt="Voltar para o início" class="icone-voltar">
+  Voltar ao Início
+</a>
         <h2 class="cor-azul">Seu corpo está mudando? Isso é natural!<br><br> Descubra o que acontece nessa fase e como se sentir bem com isso.
 </h2>
     
