--- a/saude-mental.html
+++ b/saude-mental.html
@@ -29,10 +29,10 @@
             </div>
         </header>
         <section>
-           <a href="index.html" class="botao-voltar-cor-roxo">
-          <img src="_imagem/inicio.png" alt="Voltar para o início" class="icone-voltar-cor-roxo">
-          Voltar ao Início
-      </a>
+        <a href="index.html" class="botao-voltar botao-voltar-cor-roxo">
+  <img src="_imagem/inicio.png" alt="Voltar para o início" class="icone-voltar">
+  Voltar ao Início
+</a>
         <h2 class="cor-roxo">A adolescência pode trazer inseguranças e dúvidas. Aqui vamos falar sobre autocuidado e pedir ajuda quando precisar.</h2>
     <div class="conteudo-com-imagem-saude-mental">
         <img src="_imagem/emoçoes.png" alt="icone" class="icone saude-mental">
@@ -130,13 +130,12 @@ Se precisar desabafar ou estiver passando por um momento difícil, ligue 188 (CV
 
 </section>    
 </div>
-   <footer class="cor-roxo">
- Referências retiradas desses sites :<br>
- Ministério da Saúde -  https://www.gov.br/saude<br>
-Manual MSD de Saúde - https://www.msdmanuals.com/pt-br<br>
-Drauzio Varella-
-https://drauziovarella.uol.com.br <br>
-    © 2025  Todos os direitos 
+<footer class="cor-roxo">
+  Referências retiradas desses sites :<br>
+  Ministério da Saúde - https://www.gov.br/saude<br>
+  Manual MSD de Saúde - https://www.msdmanuals.com/pt-br<br>
+  Drauzio Varella - https://drauziovarella.uol.com.br <br>
+  © 2025 Todos os direitos 
 </footer>
 
 </body>
