--- a/saude-sexual.html
+++ b/saude-sexual.html
@@ -29,10 +29,11 @@
             </div>
         </header>
         <section>
-            <a href="index.html" class="botao-voltar-cor-laranja">
-          <img src="_imagem/inicio.png" alt="Voltar para o início" class="icone-voltar-cor-laranja">
-          Voltar ao Início
-      </a>
+           <a href="index.html" class="botao-voltar botao-voltar-cor-laranja">
+  <img src="_imagem/inicio.png" alt="Voltar para o início" class="icone-voltar">
+  Voltar ao Início
+</a>
+
             <h2 class="cor-laranja">Falar sobre sexo é cuidar de si. Saiba como ter responsabilidade, proteger seu corpo e suas emoções.</h2>
    
 <div class="conteudo-com-imagem-relacao-sexual">
@@ -165,15 +166,12 @@ Cuide do seu corpo e da sua saúde, sempre com respeito e cuidado.<br><br>
 </section>
     </div>
 <footer class="cor-laranja">
- Referências retiradas desses sites :<br>
- Ministério da Saúde gov.br/saude<br>
-
-Fiocruz – fiocruz.br<br>
-
-UNFPA Brasil – https://brazil.unfpa.org<br>
-
-Organização Mundial da Saúde–who.int <br>
-    © 2025  Todos os direitos 
-</footer >
+  Referências retiradas desses sites :<br>
+  Ministério da Saúde gov.br/saude<br>
+  Fiocruz – fiocruz.br<br>
+  UNFPA Brasil – https://brazil.unfpa.org<br>
+  Organização Mundial da Saúde–who.int <br>
+  © 2025 Todos os direitos 
+</footer>
 </body>
 </html>
